--- a/index.htm
+++ b/index.htm
@@ -10,29 +10,45 @@
     <link rel="shortcut icon" href="../images/fav_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <!-- Bulma Version 0.9.0-->
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.0/css/bulma.min.css" />
     <style type="text/css">
         html,
         body {
             font-family: 'Open Sans';
+            background-color: rgba(0,28,39,1);
         }
 
         img {
             padding: 5px;
             border: 1px solid #ccc;
         }
+
+        .title
+        {
+            color: rgb(229, 189, 0);
+        }
+
+        .subtitle {
+            color: white;
+        }
+
+        .subtitle a {
+            color: rgb(229, 189, 0);
+            font-size: larger;
+            text-decoration: underline;
+        }
+
     </style>
 </head>
 
 <body>
     <section class="hero is-fullheight is-default is-bold">
         <div class="hero-body">
-            <div class="container has-text-centered">
+            <div class="container">
                 <div class="columns is-vcentered">
                     <div class="column is-5">
-                        <figure class="image is-4by3">
-                            <img src="https://picsum.photos/800/600/?random" alt="Description">
+                        <figure class="image">
+                            <img src="PhotoEB.png" alt="Description">
                         </figure>
                     </div>
                     <div class="column is-6 is-offset-1">
@@ -43,22 +59,9 @@
                             Vuoi mandarmi un messaggio o richiedere i miei servizi?
                         </h2>
                         <br>
-                        <p class="has-text-centered">
-                            <a class="button is-medium is-info is-outlined">
-                                Learn more
-                            </a>
-                        </p>
+                        <p class="subtitle"><b><a href="https://www.speakpipe.com/emanuelebartolesi">Ask</a></b>: se vuoi chiedermi qualcosa e vuoi una risposta durante una live su Twitch</p>
+                        <p class="subtitle"><b><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=0qgjplG3uUaF4HjnyFgusbEYiIm34U1Ks5um9vpqEqdUM1EzNFM0MUlSTzNKNUpNM1hNNlVZQ1pWUi4u">AskPro</a></b>: se vuoi prenotare una call one to one su un argomento tra le mie capacità</p>
                     </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="hero-foot">
-            <div class="container">
-                <div class="tabs is-centered">
-                    <ul>
-                        <li><a>Emanuele Bartolesi</a></li>
-                    </ul>
                 </div>
             </div>
         </div>
